--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
     
                         </div>
                     <div class="price-wrapper">
-                        <span class="price">900€</span>
+                        <span class="price">900</span><span class ="currency-name">€</span>
                         <section class="imp-tehs">
                             <div class="bay">
                                 <a class="icons2" href="#">
